--- a/views/client/chitietsp/chitietsp.ejs
+++ b/views/client/chitietsp/chitietsp.ejs
@@ -70,7 +70,6 @@
                                                     </div>
                                                     <div class="product-addto-links">
                                                         <div id="fb-root"></div>
-                                                        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v11.0&appId=333424968148234&autoLogAppEvents=1" nonce="mSN8ew8m"></script>
                                                         <div class="fb-share-button" data-href="https://donghothoitrang.herokuapp.com/chitietsp?id=<%= indexct[0].masp %>" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdonghothoitrang.herokuapp.com%2Fchitietsp%3Fid%3D<%= indexct[0].masp %>&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Chia sẻ</a></div>
                                                     </div>
                                                 </div>
@@ -123,7 +122,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <div id="/chitietsp?id=<%= indexct[0].masp %>"></div>
+                                <div id="fb-root"></div>
                                 <!-- <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v11.0&appId=333424968148234&autoLogAppEvents=1" nonce="oxOi1s2e"></script> -->
                                 <div class="fb-comments" data-href="https://donghothoitrang.herokuapp.com/chitietsp/?id=<%= indexct[0].masp %>" data-width="100%" data-numposts="10"></div>
                             </div>
@@ -134,6 +133,7 @@
                 <%- include ('../partials/footer'); -%>
         </div>
     </body>
-    
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v11.0&appId=333424968148234&autoLogAppEvents=1" nonce="ykJCp0C3"></script>  
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v11.0&appId=333424968148234&autoLogAppEvents=1" nonce="1WrrHR29"></script>
 
 </html>
