update san pham

--- a/views/admin/adsanpham/sanpham.ejs
+++ b/views/admin/adsanpham/sanpham.ejs
@@ -55,7 +55,7 @@
                                 <%= sp.id_maloai==1 ? 'Đồng hồ nam' : 'Đồng hồ nữ' %>
                               </td>
                               <td>
-                                <%= sp.trangthai==1 ? 'Còn hàng' : 'Sắp Hết hàng' %>
+                                <%= sp.trangthai==1 ? 'Còn hàng' : 'Hết hàng' %>
                               </td>
                               <td>
                                 <img src="client/img/product/<%= sp.hinhanh %>">
