--- a/views/admin/adcanhan/canhan.ejs
+++ b/views/admin/adcanhan/canhan.ejs
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+        .error{
+            color: red;
+            font-style: italic;
+        }
+    </style>
 <%- include('../partials/adminhead'); -%>
-
     <body>
         <section id="container">
             <%- include('../partials/adminheader'); -%>
@@ -10,7 +15,7 @@
                     <section id="main-content">
                         <section class="wrapper">
                             <div class="clearfix">
-                                <form action="/admin/canhan/sendinfor" method="post">
+                                <form id="formChangeAccount" action="/admin/canhan/sendinfor" method="post">
                                     <input type="hidden" name="idnv" value="<%= nhanvien ? nhanvien.manv : '' %>" />
                                     <div class="row" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                         <div class="col-lg-12">
@@ -20,8 +25,7 @@
                                                 <h2>QUẢN LÝ TÀI KHOẢN</h2>
                                             </div>
                                         </div>
-                                        <div
-                                            class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12 col-xs-12">
+                                        <div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12 col-xs-12">
                                             <div class="billing-fields">
                                                 <div class="row">
                                                     <div class="col-xs-12">
@@ -92,6 +96,7 @@
         </section>
         <%- include('../partials/adminscript_bottom'); -%>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
     <script>
         let mess = `<%= mess %>`;
 
@@ -103,6 +108,31 @@
             })
         }
 
+        $("#formChangeAccount").validate({
+                rules: {
+                    name:{
+                        required: true
+                    },
+                    email:{
+                        required: true,
+                    },
+                    phone:{
+                        required: true,
+                    }
+                },
+                messages:{
+                    name: {
+                        required: 'Tên nhân viên không được để trống'
+                    },
+                    email:{
+                        required: 'Email không được để trống'
+                    },
+                    phone: {
+                        required: 'Số điện thoại không được để trống'
+                    }
+                   
+                }
+            });
     </script>
 
 </html>
