--- a/views/client/canhan/canhan.ejs
+++ b/views/client/canhan/canhan.ejs
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+    .single-register .error {
+        color: red;
+    }
+</style>
 <%- include ('../partials/head'); -%>
 
     <body>
@@ -8,7 +13,7 @@
                 <!-- user-login-area-start -->
                 <div class="user-login-area mb-70 mt-40">
                     <div class="container">
-                        <form action="/canhan/sendinfor" method="post">
+                        <form action="/canhan/sendinfor" method="post" id="formCaNhan">
                             <input type="hidden" name="idkh" value="<%= customer ? customer.makh : '' %>" />
                             <div class="row" class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                 <div class="col-lg-12">
@@ -98,5 +103,20 @@
                 })
             }  
         })
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+    <script>
+        $("#formCaNhan").validate({
+            rules: {
+                name: {
+                    required: true,
+                },
+            },
+            messages: {
+                name: {
+                    required: 'Họ và tên không được để trống',
+                },
+            }
+        });
     </script>
 </html>
